option java_package = "ralph_protobuffs";
option java_outer_classname = "DurabilityPrepareProto";

import "util.proto";
import "partnerRequestSequenceBlock.proto";

message DurabilityPrepare
{
    message PairedPartnerRequestSequenceEndpointUUID
    {
        required PartnerRequestSequenceBlock rpc_args = 1;
        required UUID endpoint_uuid = 2;
    }
    
    required UUID event_uuid = 1;
    repeated PairedPartnerRequestSequenceEndpointUUID rpc_args = 2;
}